@@ -1,6 +1,6 @@
 /************************************************************************
 **
-**  Copyright (C) 2015-2023 Kevin B. Hendricks, Stratford, Ontario, Canada
+**  Copyright (C) 2015-2024 Kevin B. Hendricks, Stratford, Ontario, Canada
 **  Copyright (C) 2009-2011 Strahinja Markovic  <strahinja.markovic@gmail.com>
 **
 **  This file is part of Sigil.
@@ -594,6 +594,28 @@ void FolderKeeper::RemoveResource(const Resource *resource)
     m_SuspendedWatchedFiles.removeAll(resource->GetFullPath());
     emit ResourceRemoved(resource);
 }
+
+
+void FolderKeeper::BulkRenameResources(const QList<Resource *> resources, const QStringList &newnames)
+{
+    bool in_bulk = true;
+    QHash<QString, Resource*> renamedDict;
+    for (int i=0; i < resources.size(); i++) {
+        Resource * rsc = resources.at(i);
+        QString newnm = newnames.at(i);
+        QString oldbookpath = rsc->GetRelativePath();
+        bool success = rsc->RenameTo(newnm, in_bulk);
+        if (success) {
+            renamedDict[oldbookpath] = rsc;
+            QString newbookpath = rsc->GetRelativePath();
+            m_Path2Resource.remove(oldbookpath);
+            m_Path2Resource[newbookpath] = rsc;
+        }
+    }
+    m_OPF->BulkResourcesRenamed(renamedDict);
+    updateShortPathNames();
+}
+
 
 void FolderKeeper::ResourceRenamed(const Resource *resource, const QString &old_full_path)
 {
