@@ -1,6 +1,6 @@
 /************************************************************************
 **
-**  Copyright (C) 2015-2023 Kevin B. Hendricks, Stratford ON
+**  Copyright (C) 2015-2024 Kevin B. Hendricks, Stratford ON
 **  Copyright (C) 2013      John Schember <john@nachtimwald.com>
 **  Copyright (C) 2009-2011 Strahinja Markovic  <strahinja.markovic@gmail.com>
 **
@@ -174,6 +174,7 @@ public slots:
     void UpdateSpineOrder(const QList<HTMLResource *> html_files);
 
     void ResourceRenamed(const Resource *resource, QString old_full_path);
+    void BulkResourcesRenamed(const QHash<QString, Resource *> renamedDict);
 
     void ResourceMoved(const Resource *resource, QString old_full_path);
     void BulkResourcesMoved(const QHash<QString, Resource *> movedDict);
