@@ -188,7 +188,7 @@ QIcon Resource::Icon() const
 }
 
 
-bool Resource::RenameTo(const QString &new_filename)
+bool Resource::RenameTo(const QString &new_filename, bool in_bulk)
 {
     QString new_path;
     bool successful = false;
@@ -202,7 +202,9 @@ bool Resource::RenameTo(const QString &new_filename)
         QString old_path = m_FullFilePath;
         m_FullFilePath = new_path;
         SetShortPathName(new_filename);
-        emit Renamed(this, old_path);
+        if (!in_bulk) {
+            emit Renamed(this, old_path);
+        }
     }
 
     return successful;
